# robot_v1

./: .gitignore  LICENSE  pyproject.toml
jupyter/: matriz_rotacion.ipynb  prueba_comandos.ipynb  rotacion_pie_plano_xy.ipynb
src/: main.py  r_main.py
src/animation/: Spotmicro_Animation_Library_v01.py  animacion.py  animation.py  display.py
src/centro_gravedad/: centro_g.py
src/config/: colores.py  coordenadas.py  dimensiones.py  inercia.py  mover_pie.py  parametros_caminar.py  puntos_torso.py
src/control/: control.py
src/motion/: ActualizarPosicion.py  AreaMovimientoPie.py  ControlFase.py  Posionador.py  caminar.py  caminar_v2.py  move.py
src/test/: joystick.py  matrix.py  posicion  tes_op.py  test_animation.py
src/utils/: Spotmicro_Gravity_Center_Library_v01.py  angulo_rotacion_actual.py  cinematica.py  cinematica_cg.py  compansacion.py  interpolacion.py  operador.py  rotacion_pie_plano_xy.py
